--- a/.github/workflows/interaction.yml
+++ b/.github/workflows/interaction.yml
@@ -1,12 +1,11 @@
 name: Test Actions
 
 on:
-  pull_request:
-    types: [ labeled ]
+  issues:
+    types: [opened]
 
 jobs:
   build:
-    if: ${{ github.event.label.name == 'interaction' }}
     runs-on: ubuntu-latest
     
     steps:
