--- a/.github/workflows/interaction.yml
+++ b/.github/workflows/interaction.yml
@@ -12,5 +12,5 @@ jobs:
       - uses: actions/first-interaction@v1
         with:
             repo-token: ${{ secrets.GITHUB_TOKEN }}
-            issue-message: "test issue-message"
-            pr-message: "test pr-message'
+            issue-message: 'test issue-message'
+            pr-message: 'test pr-message'
